examples/errors/25_invalid_pointer_assignment/invalid_pointer_assignment.txy
proc mdc(n, m: int; r: pointer<int>)
    *r = "test";
endproc;

proc main()
    println("=================== PROBLEMA 05 ===================");
endproc;
